assets/src/css/dashboard.css
/* ... */
.koko-analytics a:hover {
  --bs-link-color: var(--bs-link-hover-color);
}

/* dashboard box */
.ka-box, .ka-filter {
  background: #fff;
  border-radius: var(--bs-border-radius);
}
.ka-filter:hover {
  background: var(--bs-tertiary-bg);
}
/* end dashboard box */

/* totals bar */
.ka-filter {
  padding: 0.5rem;
  margin-bottom: 0.5rem;
  cursor: pointer;
  font-size: 1rem;
  line-height: 1rem;
  border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;

}

/* chart */
.ka-chart {
  overflow: visible;
  min-height: 200px;
  font-size: 14px;
}
.ka-chart--tooltip {
  position: absolute;
  z-index: 9991; /* above wp admin menu */
  font-size: 1rem;
}
.ka-chart--tooltip-box {
  background: var(--bs-dark-color);
  box-shadow: var(--bs-box-shadow);
  border-radius: 4px;
  color: white;
}
.ka-chart--tooltip-heading {
  font-weight: 600;
  padding: 0.75rem;
  line-height: 1;
  text-align: center;
}
.ka-chart--tooltip-content {
  padding: 0.5rem 1rem;
  width: 50%;
  display: block;
  flex: 1;
}
.ka-chart--tooltip-content {
  border-top: 3px solid transparent;
}
.ka-chart--tooltip-amount {
  color: white;
  font-weight: bold;
}
.ka-chart--tooltip-arrow {
  width: 0;
  height: 0;
  margin-left: auto;
  margin-right: auto;
  /* css trick to create a downward pointing triangle */
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid rgba(46, 54, 63, 0.96);
}
.ka--pageviews {
  border-top-color: #72aee6;
  fill: #72aee6;
}
.ka--visitors {
  border-top-color: #2271b1;
  fill: #2271b1;
}
.weekend .ka--visitors {
  fill: #195585;
}

.page-filter-active tr  {
  opacity: 0.5;
}
.page-filter-active tr.page-filter-active  {
  opacity: 1;
}

/* grid */
.ka-row {
  --bs-gutter-x: 1.5rem;
  --bs-gutter-y: 0;
  display: flex;
  flex-wrap: wrap;
  margin-top: calc(-1 * var(--bs-gutter-y));
  margin-right: calc(-0.5 * var(--bs-gutter-x));
  margin-left: calc(-0.5 * var(--bs-gutter-x));
}
.ka-col {
  box-sizing: border-box;
  flex: 1 0 0;
  flex-shrink: 0;
  width: 100%;
  max-width: 100%;
  padding-right: calc(var(--bs-gutter-x) * 0.5);
  padding-left: calc(var(--bs-gutter-x) * 0.5);
  margin-top: var(--bs-gutter-y);
}
.ka-col-12 {
  flex: 0 0 auto;
  width: 100%;
}
.ka-row-cols-1 .ka-col {
  flex: 0 0 auto;
  width: 100%;
}


/* end grid */

/* tables */
.ka-table {
  table-layout: fixed;
  width: 100%;
  border-spacing: 0;
}

.ka-table th,
.ka-table td {
  text-align: left;
  border-top: 1px solid #efefef;
  border-top-color: rgb(239, 239, 239);
  padding: 6px 8px;
}
.ka-table th {
  background: var(--bs-dark-color);
  border-color: var(--bs-dark-color);
  color: white;
}
.ka-table th:first-child {
  border-top-left-radius: 6px;
}
.ka-table th:last-of-type {
    border-top-right-radius: 6px;
}
.w-10ch {
  width: 10ch;
}
/* end tables */

/* forms */
.ka-label {
  display: block;
  margin-bottom: 0.5em;
  font-weight: bold;
}
.ka-input,
.koko-analytics .ka-input {
  display: block;
  width: 100%;
  max-width: none;
  padding: .375rem .75rem;
  font-family: var(--bs-body-font-family);
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: var(--bs-body-color);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--bs-body-bg);
  background-clip: padding-box;
  border: var(--bs-border-width) solid var(--bs-border-color);
  border-radius: var(--bs-border-radius);
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  box-sizing: border-box;
  margin: 0;
}
@media (prefers-reduced-motion: reduce) {
  .ka-input {
    transition: none;
  }
}
.ka-input[type=file] {
  overflow: hidden;
}
.ka-input[type=file]:not(:disabled):not([readonly]) {
  cursor: pointer;
}
.koko-analytics .ka-input:focus,
.ka-input:focus {
  color: var(--bs-body-color) !important;
  background-color: var(--bs-body-bg) !important;
  border-color: #86b7fe !important;
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.ka-input:disabled {
  background-color: var(--bs-secondary-bg);
  opacity: 1;
}
.ka-input::-webkit-file-upload-button {
  padding: 0.375rem 0.75rem;
  margin: -0.375rem -0.75rem;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
  color: var(--bs-body-color);
  background-color: var(--bs-tertiary-bg);
  pointer-events: none;
  border-color: inherit;
  border-style: solid;
  border-width: 0;
  border-inline-end-width: var(--bs-border-width);
  border-radius: 0;
  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
.ka-input::file-selector-button {
  padding: 0.375rem 0.75rem;
  margin: -0.375rem -0.75rem;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
  color: var(--bs-body-color);
  background-color: var(--bs-tertiary-bg);
  pointer-events: none;
  border-color: inherit;
  border-style: solid;
  border-width: 0;
  border-inline-end-width: var(--bs-border-width);
  border-radius: 0;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
@media (prefers-reduced-motion: reduce) {
  .ka-input::-webkit-file-upload-button {
    -webkit-transition: none;
    transition: none;
  }
  .ka-input::file-selector-button {
    transition: none;
  }
}
.ka-input:hover:not(:disabled):not([readonly])::-webkit-file-upload-button {
  background-color: var(--bs-secondary-bg);
}
.ka-input:hover:not(:disabled):not([readonly])::file-selector-button {
  background-color: var(--bs-secondary-bg);
}
textarea.ka-input {
  min-height: calc(1.5em + 0.75rem + calc(var(--bs-border-width) * 2));
}
.ka-input::-webkit-datetime-edit {
  display: block;
  padding: 0;
}
/* ... */

